hopefully fixed arena spacing issue

--- a/less/main.less
+++ b/less/main.less
@@ -14,6 +14,8 @@
 		width: 25%;
 		height: @default_height;
 		float: left;
+		padding: 0 0 0 0;
+		margin: 0 0 0 0;
 	}
 
 	#arena
@@ -24,7 +26,9 @@
 		background-image: url('./img/arena3.png');
 		background-size: contain;
 		margin-right: 10px;
+		margin-left: 10px;
 		margin-top: @top_padding;
+		padding: 0 0 0 0;
 	}
 
 	#shop
@@ -32,5 +36,7 @@
 		width: 25%;
 		height: @default_height;
 		float: left;
+		padding: 0 0 0 0;
+		margin: 0 0 0 0;
 	}
 }
